[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8"
actix-web-grants = "3.0"
actix-cors = "0.6"
jsonwebtoken = "8.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls", "mysql", "chrono", "json" ] }
anyhow = "1"
dotenv = "0.15"
env_logger = "0.10"
clap = { version = "4.2", features = ["derive", "env"] }
futures = "0.3"
steam-openid = "0.2"
